# spreadsheet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Cell.cpp  Cell.h  Function.h  FunctionFactory.cpp  FunctionFactory.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Observer.h  Spreadsheet.cpp  Spreadsheet.h  SpreadsheetWindow.cpp  SpreadsheetWindow.h  Subject.h  Sum.cpp  Sum.h  main.cpp
tests/: CMakeLists.txt  CellTest.cpp  FunctionFactoryTest.cpp  MaxTest.cpp  MeanTest.cpp  MinTest.cpp  SpreadsheetTest.cpp  SpreadsheetWindowTest.cpp  SumTest.cpp
